# syo

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.config/: insta.yaml
.github/workflows/: ci.yml
crates/siyuan-cli/: Cargo.toml
crates/siyuan-cli/src/: config.rs  lib.rs  main.rs  output.rs
crates/siyuan-cli/src/commands/: asset.rs  attrs.rs  block.rs  create_doc.rs  delete_block.rs  doc.rs  get_block.rs  get_doc.rs  graph.rs  insert_blocks.rs  mod.rs  move_block.rs  notebook.rs  search.rs  serve_mcp.rs  set_attrs.rs  sql.rs  status.rs  tag.rs  update_block.rs
crates/siyuan-cli/src/commands/asset/: mod.rs  reference.rs  upload.rs
crates/siyuan-cli/src/commands/attrs/: mod.rs  set.rs
crates/siyuan-cli/src/commands/block/: delete.rs  get.rs  insert.rs  move.rs  update.rs
crates/siyuan-cli/src/commands/doc/: create.rs  get.rs  lookup.rs  mod.rs  move.rs  remove.rs  rename.rs  resolve.rs  set_sort.rs  tree.rs
crates/siyuan-cli/src/commands/graph/: mod.rs  neighborhood.rs
crates/siyuan-cli/src/commands/notebook/: create.rs  ls.rs  mod.rs  remove.rs
crates/siyuan-cli/src/commands/search/: mod.rs  text.rs
crates/siyuan-cli/src/commands/tag/: mod.rs  search.rs
crates/siyuan-cli/tests/: asset_graph.rs  block_advanced.rs  cli_integration.rs  doc_tree.rs  mcp_handshake.rs  notebook_filetree.rs  pagination_errors.rs  search.rs  tag_search.rs
crates/siyuan-cli/tests/common/: mod.rs
crates/siyuan-client/: Cargo.toml
crates/siyuan-client/src/: client.rs  escape.rs  lib.rs  response.rs
crates/siyuan-client/src/api/: asset.rs  attr.rs  block.rs  common.rs  export.rs  filetree.rs  mod.rs  notebook.rs  query.rs  system.rs
crates/siyuan-mcp/: Cargo.toml  README.md
crates/siyuan-mcp/src/: lib.rs  main.rs  registry.rs  server.rs
crates/siyuan-mcp/src/tools/: asset.rs  attr.rs  block.rs  doc.rs  filetree.rs  graph.rs  notebook.rs  sql.rs  tag.rs  util.rs
crates/siyuan-mcp/tests/: handshake.rs
crates/siyuan-model/: Cargo.toml
crates/siyuan-model/src/: bundle.rs  container.rs  doc_meta.rs  doc_tree.rs  graph.rs  lib.rs  load.rs  pagination.rs  relations.rs  section.rs  sql_guard.rs  tag.rs
crates/siyuan-render/: Cargo.toml
crates/siyuan-render/src/: agent_md.rs  json_bundle.rs  lib.rs
crates/siyuan-testkit/: Cargo.toml  README.md
crates/siyuan-testkit/src/: cleanup.rs  container.rs  health.rs  lib.rs  podman.rs  port.rs  workspace.rs
crates/siyuan-testkit/tests/: smoke.rs  snapshot_setup.rs
crates/siyuan-testkit/tests/snapshots/: snapshot_setup__redacted_snapshot_is_stable.snap
crates/siyuan-types/: Cargo.toml
crates/siyuan-types/src/: block.rs  error.rs  id.rs  lib.rs  position.rs
crates/syo/: Cargo.toml
crates/syo-cli/: Cargo.toml
crates/syo-cli/src/: config.rs  main.rs  output.rs
crates/syo-cli/src/commands/: sql.rs  status.rs
crates/syo-cli/src/commands/asset/: reference.rs  upload.rs
crates/syo-cli/src/commands/attrs/: get.rs  mod.rs  set.rs
crates/syo-cli/src/commands/block/: delete.rs  get.rs  insert.rs  mod.rs  move.rs  update.rs
crates/syo-cli/src/commands/doc/: create.rs  get.rs  lookup.rs  mod.rs  move.rs  remove.rs  rename.rs  resolve.rs  set_icon.rs  set_sort.rs  tree.rs
crates/syo-cli/src/commands/graph/: backlinks.rs  neighborhood.rs  outgoing.rs
crates/syo-cli/src/commands/notebook/: create.rs  ls.rs  remove.rs  rename.rs
crates/syo-cli/src/commands/search/: blocks.rs  hit.rs  mod.rs  text.rs
crates/syo-cli/src/commands/tag/: ls.rs  search.rs
crates/syo-cli/tests/: asset_graph.rs  block_advanced.rs  cli_integration.rs  doc_tree.rs  mcp_handshake.rs  notebook_filetree.rs  notebook_resolve.rs  pagination_errors.rs  search.rs  tag_search.rs
crates/syo-cli/tests/common/: mod.rs
crates/syo-core/: Cargo.toml
crates/syo-core/src/: asset.rs  attr.rs  block.rs  doc.rs  graph.rs  lib.rs  notebook.rs  search.rs  sql.rs  system.rs  tag.rs
crates/syo-mcp/: Cargo.toml  README.md
crates/syo-mcp/src/: lib.rs  registry.rs  server.rs
crates/syo-mcp/src/tools/: asset.rs  attr.rs  block.rs  doc.rs  filetree.rs  graph.rs  mod.rs  notebook.rs  sql.rs  system.rs  tag.rs  util.rs
crates/syo/src/commands/: serve_mcp.rs
crates/syo/src/commands/attrs/: set.rs
crates/syo/src/commands/doc/: get.rs  set_icon.rs
crates/syo/src/commands/notebook/: mod.rs
crates/syo/src/commands/search/: blocks.rs  hit.rs  mod.rs
crates/syo/src/commands/tag/: mod.rs
crates/syo/tests/: cli_integration.rs  doc_tree.rs  pagination_errors.rs  search.rs  tag_search.rs
crates/syo/tests/common/: mod.rs
docs/: decisions.md
docs/readme/: README.cn.md
docs/superpowers/plans/: 2026-05-01-test-framework-decisions.md  2026-05-01-test-framework.md  2026-05-01-v1-implementation.md  2026-05-02-integration-coverage.md  2026-05-03-search-consolidation-and-notebook-resolution.md  2026-05-03-syo-core-extraction.md
docs/superpowers/plans/2026-05-01-v1-implementation/: phase-a-foundation.md  phase-b-client.md  phase-c-model.md  phase-d-render.md  phase-e-cli.md  phase-f-integration.md
docs/superpowers/specs/: 2026-05-02-ergonomic-stage-design.md  2026-05-03-search-consolidation-and-notebook-resolution-design.md  2026-05-03-syo-core-extraction-design.md
