[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tpob/siyuan-cli"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
insta = { version = "1", features = ["yaml", "json"] }

# 临时保留旧的 binary 直到 v1 plan 把它迁走
[package]
name = "siyuan-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
