[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tpob/siyuan-cli"

[workspace.dependencies]
# rmcp: Rust SDK for MCP; "server" enables ServerHandler, "transport-io" enables the stdio() transport
rmcp = { version = "1", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
clap = { version = "4", features = ["derive", "env"] }
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
insta = { version = "1", features = ["yaml", "json", "redactions"] }
regex = "1"
once_cell = "1"
camino = "1"
# sqlparser: AST-level read-only validation for the `sql` command. The kernel
# does NOT enforce read-only at the SQL level (see security advisories
# GHSA-jqwg-75qf-vmf9 / GHSA-j7wh-x834-p3r7); we cannot rely on the kernel
# guarding writes for us, so we parse the statement client-side and reject
# anything that is not a single Query / Explain-of-Query node.
sqlparser = "0.58"

# Path deps for in-workspace crates
siyuan-types = { path = "crates/siyuan-types" }
siyuan-client = { path = "crates/siyuan-client" }
siyuan-model = { path = "crates/siyuan-model" }
siyuan-render = { path = "crates/siyuan-render" }
siyuan-testkit = { path = "crates/siyuan-testkit" }
siyuan-mcp = { path = "crates/siyuan-mcp" }
