[package]
name = "siyuan-client"
version = "0.1.5"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
siyuan-types = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
