[package]
name = "siyuan-model"
version = "0.1.5"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
siyuan-types = { workspace = true }
siyuan-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
sqlparser = { workspace = true }
