[package]
name = "siyuan-render"
version = "0.1.4"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
siyuan-types = { workspace = true }
siyuan-model = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
