[package]
name = "siyuan-testkit"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Spin up disposable SiYuan instances in Podman for integration tests."

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
