[package]
name = "siyuan-types"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core data types for the SiYuan harness."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
