[package]
name = "syo-cli"
version = "0.1.4"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "syo"
path = "src/main.rs"

[dependencies]
siyuan-types = { workspace = true }
siyuan-client = { workspace = true }
siyuan-model = { workspace = true }
siyuan-render = { workspace = true }
syo-core = { workspace = true }
syo-mcp = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
siyuan-testkit = { workspace = true }
insta = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }
