[package]
name = "syo-core"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared operations layer for syo CLI and MCP surfaces"

[dependencies]
siyuan-types = { workspace = true }
siyuan-client = { workspace = true }
siyuan-model = { workspace = true }
siyuan-render = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
