[package]
name = "syo-mcp"
version = "0.1.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Model Context Protocol server exposing the SiYuan harness."

# Features used:
#   server        – enables ServerHandler trait
#   transport-io  – enables rmcp::transport::stdio() for stdin/stdout framing

[dependencies]
rmcp = { workspace = true }
siyuan-types = { workspace = true }
siyuan-client = { workspace = true }
siyuan-model = { workspace = true }
siyuan-render = { workspace = true }
syo-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
